# taosdump-rs

./: Cargo.toml  output.txt  sample.avro  sample.parquet  test.db
cli/: Cargo.toml
cli/src/: lib.rs
core/: Cargo.toml
core/src/: avro.rs  commands.rs  dumpin.rs  dumpout.rs  lib.rs  parquet.rs
src/: main.rs
utils/: Cargo.toml
utils/src/: error.rs  lib.rs  taos.rs
