[package]
name = "taosdump-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avro-rs = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
parquet = "9.1.0"
libtaos = "*"
tokio = { version = "1.17.0", features = ["full"] }