[package]
name = "taosdump-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "utils",
    "cli",
    "core",
]

[dependencies]
utils = { path = "utils"}
cli = {path = "cli"}
core = {path = "core"}
better-panic = "0.3.0"