[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils"}
parquet = "9.1.0"
libtaos = "*"
tokio = { version = "1.17.0", features = ["full"] }
avro-rs="0.13.0"
bstr="0.2.17"
serde = "1.0.136"
serde_json = "1.0.79"